--- a/Views/Libro/Create.cshtml
+++ b/Views/Libro/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="autorid" class="control-label">Autor</label>
-                @Html.DropDownList("autorid", new SelectList(@*(List<Autor>)*@ViewBag.listaAutores,"id", "apellido"), "Autor")
+                @Html.DropDownList("autorid", new SelectList((List<Autor>)ViewBag.listaAutores,"id", "apellido"), "Autor")
                 <span asp-validation-for="autorid" class="text-danger"></span>
             </div>
             <div class="form-group">
