Login Valido, error desconocido 404

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
           <p id="clave">
               @Html.Password("id2")
           </p>
-          <input type="submit" value="Ingresar" class="btn-outline-dark form-control" />
+          <input type="submit" asp-action="LogIn" value="Ingresar" class="btn-outline-dark form-control" />
       </div>
 
   }
