--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">OLIS</h1>
+    
     
   @using (Html.BeginForm())
   {
@@ -23,14 +23,4 @@
 
   }
 
-   
-    
-    @*<form asp-action="logIn">
-        <label for="user">Usuario</label>
-        <input id="user" type="text"/>
-        <label for="pass">Contraseña</label>
-        <input id="pass" type="password"/>
-        <input type="submit" value="Log In"/>
-    </form>*@
-
-</div>
+ </div>
