--- a/Views/Usuario/Details.cshtml
+++ b/Views/Usuario/Details.cshtml
@@ -34,12 +34,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.username)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.password)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.password)
-        </dd>
+        </dd>*@
     </dl>
 </div>
 <div>
@@ -56,6 +56,7 @@
         @foreach (var item in Model.autoresFavoritos)
         {
             var idAutor = new { id = item.id };
+            item.nombre = item.nombre + " " + item.apellido;
             @Html.ActionLink(item.nombre, "Details", "Autor", idAutor)
         }
     </div>
