--- a/Views/Libro/Details.cshtml
+++ b/Views/Libro/Details.cshtml
@@ -43,7 +43,7 @@
         </dd>
     </dl>
 </div>
-<div>
+@*<div>
     @using (Html.BeginForm())
     {
     <div>
@@ -80,7 +80,7 @@
     }
 
 
- </div>
+ </div>*@
     <div>
         <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
         <a asp-action="Index">Back to List</a>
