Empieza a tomar forma. Falta corregir vista por vista que es lo que se muestra. Las funcionalidades estan completas.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,6 +18,13 @@
           <p id="clave">
               @Html.Password("id2")
           </p>
+          @if(ViewBag.Error != null) 
+          {
+              <p style="color:red;">
+                  @Html.ViewBag.Error
+              </p>
+          }
+          
           <input type="submit" asp-action="LogIn" value="Ingresar" class="btn-outline-dark form-control" />
       </div>
 
