--- a/Views/Libro/IndexBusquedaUser.cshtml
+++ b/Views/Libro/IndexBusquedaUser.cshtml
@@ -1,24 +1,12 @@
 ﻿@model IEnumerable<AppLibros.Models.Libro>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "IndexBusqueda";
 }
 
-<h1>Index</h1>
+<h1>Resultados</h1>
 
-@using (Html.BeginForm()) 
-{
-<div>
-    <label for="busqueda1">Buscar por titulo</label>
-    <p id="busqueda1">
-        @Html.TextBox("testo")
-    </p>
-    <input type="submit" asp-action="buscarLibro" value="Buscar"/>
-</div>
-}
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -53,11 +41,12 @@
                 @Html.DisplayFor(modelItem => item.votos)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.id">Details</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+<div>
+    <a asp-action="Index">Volver a Libros</a>
+</div>
