--- a/Views/Libro/IndexUser.cshtml
+++ b/Views/Libro/IndexUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Libros</h1>
 
 @using (Html.BeginForm()) 
 {
@@ -16,9 +16,7 @@
     <input type="submit" asp-action="buscarLibro" value="Buscar"/>
 </div>
 }
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -53,9 +51,7 @@
                 @Html.DisplayFor(modelItem => item.votos)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.id">Details</a>
             </td>
         </tr>
 }
