--- a/Views/Autor/IndexUser.cshtml
+++ b/Views/Autor/IndexUser.cshtml
@@ -17,9 +17,6 @@
     </div>
 }
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -49,9 +46,7 @@
                     @Html.DisplayFor(modelItem => item.libros.Count)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                    <a asp-action="Details" asp-route-id="@item.id">Details</a> 
                 </td>
             </tr>
         }
