--- a/Views/Autor/DetailsUser.cshtml
+++ b/Views/Autor/DetailsUser.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+    <h1>@Html.DisplayNameFor(model => model.nombre) @Html.DisplayFor(model => model.apellido)</h1>
 
 <div>
-    <h4>Autor</h4>
+    <h4>Detalles</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -34,7 +34,7 @@
         @Html.ActionLink(item.titulo, "Details", "Libro", idLibro)
         
         <br />
-        //Evaluar si se agrega la puntuacion de cada libro.
+        
     }
 </div>
 <div>
@@ -76,6 +76,5 @@
 
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver al indice</a>
 </div>
