--- a/Views/Autor/IndexBusquedaUser.cshtml
+++ b/Views/Autor/IndexBusquedaUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "IndexBusquedaAdmin";
 }
 
-<h1>IndexBusquedaAdmin</h1>
+    <h1>Resultados para "@ViewBag.busqueda"</h1>
 
 
 <table class="table">
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.libros.Count)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.id">Details</a>
+                <a asp-action="Details" asp-route-id="@item.id">Detalles</a>
             </td>
         </tr>
 }
