--- a/Views/Autor/IndexUser.cshtml
+++ b/Views/Autor/IndexUser.cshtml
@@ -46,7 +46,7 @@
                     @Html.DisplayFor(modelItem => item.libros.Count)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.id">Details</a> 
+                    <a asp-action="Details" asp-route-id="@item.id">Detalles</a> 
                 </td>
             </tr>
         }
