--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">OLIS</h1>
-    
+    <h1 class="display-4">Bienvenido</h1>
+    <hr />
     
   @using (Html.BeginForm())
   {
@@ -27,7 +27,7 @@
           
           <input type="submit" asp-action="LogIn" value="Ingresar" class="btn-outline-dark form-control" />
       </div>
-
+      <hr />
   }
     <div>
         <h4>Registrarse</h4>
@@ -39,5 +39,5 @@
 
         </div>
     </div>
-
+   
  </div>
