--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model AppLibros.Models.Usuario
+﻿@using Microsoft.AspNetCore.Http
+@model AppLibros.Models.Usuario
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Nuevo Usuario</h1>
 
-<h4>Usuario</h4>
+<h4>Completar los campos</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,15 +39,19 @@
                 <span asp-validation-for="password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
-    @* Definir a donde se puede volver con este boton *@
+    @if (Context.Session.GetString("esAdmin") == "True")
+    {
+        <a asp-action="Index">Volver al indice</a>
+    }
+
+
 </div>
 
 @section Scripts {
