--- a/Views/Autor/Edit.cshtml
+++ b/Views/Autor/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+    <h1>@Html.DisplayNameFor(model => model.nombre) @Html.DisplayNameFor(model => model.apellido)</h1>
 
-<h4>Autor</h4>
+<h4>Editar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,14 +24,14 @@
                 <span asp-validation-for="apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver al indice</a>
 </div>
 
 @section Scripts {
