--- a/Views/Autor/Index.cshtml
+++ b/Views/Autor/Index.cshtml
@@ -18,7 +18,7 @@
 }
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nuevo Autor</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,9 @@
                     @Html.DisplayFor(modelItem => item.libros.Count)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.id">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.id">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.id">Eliminar</a>
                 </td>
             </tr>
         }
