--- a/Views/Libro/DetailsInvitado.cshtml
+++ b/Views/Libro/DetailsInvitado.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "DetailsInvitado";
 }
 
-<h1>Details</h1>
+    <h1>@Html.DisplayFor(model => model.titulo)</h1>
 
 <div>
-    <h4>Libro</h4>
+    <h4>Detalles</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -23,16 +23,15 @@
             @Html.DisplayFor(model => model.isbn)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.resena)
+            @Html.DisplayNameFor(model => model.autorid)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.resena)
+            @ViewBag.autor
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.puntaje)
         </dt>
         <dd class="col-sm-10">
-            @*@Html.DisplayFor(model => model.puntaje)*@
             @Html.ViewBag.promedio
         </dd>
         <dt class="col-sm-2">
@@ -40,6 +39,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.votos)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.resena)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.resena)
         </dd>
     </dl>
 </div>
