--- a/Views/Libro/DetailsUsuario.cshtml
+++ b/Views/Libro/DetailsUsuario.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+    <h1>@Html.DisplayFor(model => model.titulo)</h1>
 
 <div>
-    <h4>Libro</h4>
+    <h4>Detalles</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.isbn)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.resena)
+            @Html.DisplayNameFor(model => model.autorid)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.resena)
+            @ViewBag.autor
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.puntaje)
@@ -40,20 +40,28 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.votos)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.resena)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.resena)
+        </dd>
     </dl>
 </div>
+<hr />
 <div>
     @if (ViewBag.puntaje == -1)
     {
         @using (Html.BeginForm())
         {
-            <label for="puntaje">Puntuar</label>
-            <input type="range" min="0" max="10" id="puntaje" name="puntaje"/>
+            <label for="puntaje">Mi calificacion</label>
+            <input type="range" value="0" max="10" oninput="num.value = this.value" id="puntaje" name="puntaje">
+            <output id="num">0</output>
             var idLibro = new { id = (int)ViewBag.idLibro };
             <p hidden>
-                @Html.TextBox("idLibro",idLibro.id)
+                @Html.TextBox("idLibro", idLibro.id)
             </p>
-            <input type="submit" asp-action="puntuar"/>
+            <input type="submit" asp-action="puntuar" value="Calificar" />
         }
     }
     else
@@ -61,11 +69,12 @@
         <div>
             <h6>Puntaje</h6>
             <p>
-            @ViewBag.puntaje
+                @ViewBag.puntaje
             </p>
         </div>
     }
 </div>
+<hr />
 <div>
     @using (Html.BeginForm())
     {
@@ -104,6 +113,7 @@
 
 
 </div>
+<hr />
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver al indice</a>
 </div>
