--- a/Views/Libro/Edit.cshtml
+++ b/Views/Libro/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+    <h1>@Html.DisplayNameFor(model => model.titulo)</h1>
 
-<h4>Libro</h4>
+<h4>Editar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,24 +29,14 @@
                 <span asp-validation-for="resena" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="puntaje" class="control-label"></label>
-                <input asp-for="puntaje" class="form-control" />
-                <span asp-validation-for="puntaje" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="votos" class="control-label"></label>
-                <input asp-for="votos" class="form-control" />
-                <span asp-validation-for="votos" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver al indice</a>
 </div>
 
 @section Scripts {
