--- a/Views/Libro/IndexBusquedaAdmin.cshtml
+++ b/Views/Libro/IndexBusquedaAdmin.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "IndexBusqueda";
 }
 
-<h1>Resultados</h1>
+    <h1>Resultados para "@ViewBag.busquedaLibro"</h1>
 
 
 <table class="table">
@@ -41,9 +41,9 @@
                 @Html.DisplayFor(modelItem => item.votos)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.id">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.id">Eliminar</a>
             </td>
         </tr>
 }
