--- a/Views/Libro/IndexUser.cshtml
+++ b/Views/Libro/IndexUser.cshtml
@@ -51,7 +51,7 @@
                 @Html.DisplayFor(modelItem => item.votos)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.id">Details</a>
+                <a asp-action="Details" asp-route-id="@item.id">Detalles</a>
             </td>
         </tr>
 }
