--- a/Views/Usuario/Edit.cshtml
+++ b/Views/Usuario/Edit.cshtml
@@ -1,12 +1,13 @@
-﻿@model AppLibros.Models.Usuario
+﻿@using Microsoft.AspNetCore.Http
+@model AppLibros.Models.Usuario
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>@Html.DisplayFor(model => model.username)</h1>
 
-<h4>Usuario</h4>
+<h4>Editar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -37,17 +38,19 @@
                 <label asp-for="password" class="control-label"></label>
                 <input asp-for="password" class="form-control" />
                 <span asp-validation-for="password" class="text-danger"></span>
-                @* Evaluar si se agrega una validacion extra al cambio de clave. *@
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    @if (Context.Session.GetString("esAdmin") == "True")
+    {
+        <a asp-action="Index">Volver al indice</a>
+    }
 </div>
 
 @section Scripts {
