Limpiado un poco el codigo. Correccion de errores menores. Quitado de metodos sin usar.

--- a/Views/Libro/IndexUser.cshtml
+++ b/Views/Libro/IndexUser.cshtml
@@ -13,7 +13,7 @@
     <p id="busqueda1">
         @Html.TextBox("testo")
     </p>
-    <input type="submit" asp-action="buscarLibro" value="Buscar"/>
+    <input type="submit" asp-action="Search" value="Buscar"/>
 </div>
 }
 
